--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -20,6 +20,14 @@ nav.flex-container {
     overflow: hidden;
 }
 
+.logo:hover {
+    filter: drop-shadow(0 0 2em #57679E);
+}
+
+.logo.react:hover {
+    filter: drop-shadow(0 0 2em #6F7BEC);
+}
+
 .navbar-links {
     display: flex;
     justify-content: center;
@@ -28,19 +36,25 @@ nav.flex-container {
 
 .user-info {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-left: 4rem;
+    margin-left: auto;
     margin-right: 4rem;
 }
 
-/* @media (max-width: 850px) {
+@media (max-width: 850px) {
     nav.flex-container {
-        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     img {
         width: 100%;
         height: 100%;
     }
-} */
+
+    .user-info {
+        margin: auto;
+    }
+}
