--- a/src/pages/AuthPage/AuthPage.css
+++ b/src/pages/AuthPage/AuthPage.css
@@ -9,14 +9,15 @@ div.flex-container {
 .container-left {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     align-items: flex-start;
     min-width: 200px;
     max-width: 400px;
 }
 
-img {
-    height: 88%;
-    width: 88%;
+.logo-img {
+    height: 70%;
+    width: 70%;
     display: block;
 }
 
@@ -41,6 +42,7 @@ h4 {
 form {
     min-width: 400px;
     max-width: 600px;
+    min-height: 100px;
 }
 
 .center-button {
@@ -54,16 +56,16 @@ button {
 }
 
 @media (max-width: 850px) {
-    .flex-container {
+    div.flex-container {
         flex-direction: column;
     }
     .container-left {
         align-items: center;
         text-align: center;
     }
-    img {
-        width: 40%;
-        height: 40%;
+    .logo-img {
+        width: 30%;
+        height: 30%;
     }
     p {
         text-align: center;
@@ -72,5 +74,8 @@ button {
         margin-top: 2rem;
         align-items: center;
         text-align: center;
+    }
+    form {
+        min-height: none;
     }
 }
