--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -27,6 +27,10 @@
   box-sizing: border-box;
 }
 
+button {
+    font-size: small !important;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Aldrich';
 }
